# scuro

./: .gitignore  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES.md  architecture_overview.md  foundry.toml  slither.config.json
.codex-tmp/foundry-tools/: foundry-versions.txt
.github/workflows/: deploy-gas-report.yml  destroy-beta.yml  iterate-beta-runtime.yml  iterate-testnet-runtime.yml  release-beta.yml  release-testnet.yml  scuro.yml  verify.yml
analysis/slot_ev/: __init__.py  preset_loader.py  report.py  requirements.txt  simulator.py  thresholds.json
crates/scuro/chainspec/: Cargo.toml
crates/scuro/chainspec/res/genesis/: scuro-dev.json
crates/scuro/chainspec/src/: lib.rs
crates/scuro/config/: Cargo.toml
crates/scuro/config/src/: lib.rs
crates/scuro/node/: Cargo.toml
crates/scuro/node/src/: lib.rs
crates/scuro/node/tests/: devnet.rs
docs/: README.md  canonical-testnet.md  ci-cd-testing.md  deploy-gas-baseline.md  game-module-user-flows.md  github-actions-testnet-setup.md  local-deployment-testing.md  private-aws-testnet.md  protocol-architecture.md  scuro-fork.md  scuro-pr-review.md
docs/concepts/: README.md  canonical-terminology.md  deployment-config.md  event-indexing.md  protocol-enums.md
docs/integration/: README.md  blackjack-playbook.md  blackjack-sdk-handoff.md  chemin-de-fer-playbook.md  expression-lifecycle.md  governance-playbook.md  number-picker-playbook.md  pvp-poker-playbook.md  scenario-mapping.md  slot-machine-playbook.md  super-baccarat-playbook.md  (+2 more)
etc/: scuro-upstream.toml
script/: DeployLocal.s.sol  SmokeRealProofHands.s.sol  baccarat_exact_odds.py  bootstrap_launch_verifier_registry.cjs  check_slither.sh  e2e_deploy_smoke.sh  slot_gas_snapshot.sh  verify_local.sh
src/: CreatorRewards.sol  DeveloperExpressionRegistry.sol  DeveloperRewards.sol  GameCatalog.sol  GameDeploymentFactory.sol  GameEngineRegistry.sol  ProtocolSettlement.sol  ScuroGovernor.sol  ScuroStakingToken.sol  ScuroToken.sol
test/: BaccaratRules.t.sol  BlackjackController.t.sol  CheminDeFerController.t.sol  NumberPickerAdapter.t.sol  ProtocolCore.t.sol  ScuroVerifierRegistry.t.sol  SlotMachineController.t.sol  SuperBaccaratController.t.sol  TournamentController.t.sol
zk/: package.json
(+447 files in other folders)
