[package]
name = "scuro-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Scuro-specific protocol configuration for the reth fork"
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
